Parameterize no log flag (#18)
Parameterize no log flag

--- a/roles/gateway_common/tasks/initial-update-ssgconfig-password.yml
+++ b/roles/gateway_common/tasks/initial-update-ssgconfig-password.yml
@@ -1,6 +1,6 @@
 ---
 - name: Check if user password is expired # noqa 305 - no alternative to shell
-  no_log: true # don't log decrypted passwords in responses
+  no_log: "{{ no_log_flag }}" # don't log decrypted passwords in responses
   shell:
     cmd: sshpass -p '{{ gateway_default_password }}' ssh {{ ansible_ssh_extra_args }} {{ ansible_user }}@{{ ansible_host }} "chage --list {{ ansible_user }}"
   register: expired
@@ -9,7 +9,7 @@
 
 - name: Update expired ssgconfig user password
   when: expired.rc != 0 and 'Your password has expired' in expired.stderr
-  no_log: true # don't log decrypted passwords in responses
+  no_log: "{{ no_log_flag }}" # don't log decrypted passwords in responses
   expect:
     command: sshpass -p '{{ gateway_default_password }}' ssh {{ ansible_ssh_extra_args }} {{ ansible_user }}@{{ ansible_host }}
     timeout: "{{ gateway_ssh_timeout }}"
