--- a/roles/gateway_export_database/tasks/main.yml
+++ b/roles/gateway_export_database/tasks/main.yml
@@ -12,7 +12,7 @@
     state: directory
 
 - name: Dump gateway source database # noqa 305 must use shell
-  no_log: true # don't log decrypted passwords in responses
+  no_log: "{{ no_log_flag }}" # don't log decrypted passwords in responses
   shell:
     cmd: mysqldump {{ database_name }} --routines -u{{ database_user }}  -p{{ database_pass }} > {{ remote_db_temp_dir }}/ssg.sql
   register: status
@@ -30,7 +30,7 @@
   when: otkdb_name is defined
   block:
     - name: Dump otk source database # noqa 305 must use shell
-      no_log: true # don't log decrypted passwords in responses
+      no_log: "{{ no_log_flag }}" # don't log decrypted passwords in responses
       shell:
         cmd: mysqldump {{ otkdb_name }} --routines -u{{ database_admin_user }}  -p{{ database_admin_pass }} > {{ remote_db_temp_dir }}/otk.sql
 
