--- a/roles/gateway_export_database/tasks/main.yml
+++ b/roles/gateway_export_database/tasks/main.yml
@@ -4,17 +4,15 @@
     module: file
     path: "{{ controller_dir_db_backup_location }}"
     state: directory
-    mode: '0700'
-    owner: "{{ ansible_user }}"
+    mode: "0700"
 
 - name: create remote temp directory for output files
   file:
     path: "{{ remote_db_temp_dir }}"
     state: directory
 
-
 - name: Dump gateway source database # noqa 305 must use shell
-  no_log: true # don't log decrypted passwords in responses
+  no_log: "{{ no_log_flag }}" # don't log decrypted passwords in responses
   shell:
     cmd: mysqldump {{ database_name }} --routines -u{{ database_user }}  -p{{ database_pass }} > {{ remote_db_temp_dir }}/ssg.sql
   register: status
@@ -31,9 +29,8 @@
 - name: Dump otk source database
   when: otkdb_name is defined
   block:
-
     - name: Dump otk source database # noqa 305 must use shell
-      no_log: true # don't log decrypted passwords in responses
+      no_log: "{{ no_log_flag }}" # don't log decrypted passwords in responses
       shell:
         cmd: mysqldump {{ otkdb_name }} --routines -u{{ database_admin_user }}  -p{{ database_admin_pass }} > {{ remote_db_temp_dir }}/otk.sql
 
@@ -45,14 +42,14 @@
 
 - name: zip mysql output
   archive:
-    path: '{{ remote_db_temp_dir }}/*'
-    dest: '{{ db_dump_zip_file }}.zip'
+    path: "{{ remote_db_temp_dir }}/*"
+    dest: "{{ db_dump_zip_file }}.zip"
     format: zip
 
 - name: copy over the zip file to controller
   fetch:
-    src: '{{ db_dump_zip_file }}.zip'
-    dest: '{{ controller_dir_db_backup_location }}'
+    src: "{{ db_dump_zip_file }}.zip"
+    dest: "{{ controller_dir_db_backup_location }}"
 
 - name: cleanup
   file:
