--- a/roles/gateway_import_database/tasks/upgrade_gateway_database_schema.yml
+++ b/roles/gateway_import_database/tasks/upgrade_gateway_database_schema.yml
@@ -10,8 +10,7 @@
   delegate_to: localhost
 
 - name: upgrading Gateway Database Schema after import database
-  no_log: true # don't log decrypted passwords in responses
-  when:  '"Database upgrade is required" in update.stdout'
+  no_log: "{{ no_log_flag }}" # don't log decrypted passwords in responses
   expect:
     command: >
       sshpass -p '{{ ansible_password }}' ssh ssgconfig@{{ inventory_hostname }}
