--- a/roles/gateway_configure_primary_node/tasks/main.yml
+++ b/roles/gateway_configure_primary_node/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Autoprovision primary database gateway node.
   import_role:
-    name: gateway_processing_node
+    name: gateway_configure_node
   vars:
     configure_db: true
