--- a/roles/gateway_configure_processing_node/tasks/main.yml
+++ b/roles/gateway_configure_processing_node/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Autoprovision primary database gateway node.
+- name: Autoprovision processing gateway node.
   import_role:
     name: gateway_configure_node
   vars:
