--- a/playbooks/sample-cluster-migration.yml
+++ b/playbooks/sample-cluster-migration.yml
@@ -28,15 +28,28 @@
   roles:
     - gateway_configure_primary_node
 
+- name: Detect source gateway mysql nodes
+  hosts: gateway_mysql
+  gather_facts: no
+  tasks:
+    - name: collect src hosts
+      add_host:
+        hostname: "{{ hostvars[item].src }}"
+        ansible_connection: "ssh"
+        groups:
+          - gateway_mysql
+          - gateway_src
+      with_items: "{{ groups['gateway_mysql'] }}"
+
 - name: Obtain a MySQL database dump from source Gateway cluster and store it on the Ansible control node.
-  hosts: gateway_mysql_source
+  hosts: gateway_src
   serial: 1
   strategy: free
   roles:
     - gateway_export_database
 
 - name: Import the MySQL database dump into the destination (primary database node) Gateway.
-  hosts: gateway_mysql_dest
+  hosts: gateway_primary_db
   serial: 1
   strategy: free
   pre_tasks:
@@ -48,7 +61,7 @@
     - gateway_import_database
 
 - name: Upgrade Gateway version in the destination (primary database node) Gateway.
-  hosts: gateway_mysql_dest
+  hosts: gateway_primary_db
   serial: 1
   tasks:
     - name: Upgrade Gateway version.
