--- a/playbooks/gateway-database-replication.yml
+++ b/playbooks/gateway-database-replication.yml
@@ -2,7 +2,7 @@
 # This playbook will setup the Gateway's MySQL database replication.
 # See the readme under roles/gateway_replicate_database for setup instructions.
 
-- name: Replicate Gateway MySQL 8 Database
-  hosts: gateway_mysql
+- name: Configure Gateway MySQL Database Replication
+  hosts: gateway_primary_db
   roles:
     - gateway_replicate_database
