--- a/roles/gateway_replicate_database/tasks/add_slave_user.yml
+++ b/roles/gateway_replicate_database/tasks/add_slave_user.yml
@@ -1,15 +1,17 @@
-- name: Run add_slave_user.sh on {{ master_node }}
+---
+# This task creates a MySQL slave user on a Gateway.
+
+- name: Add slave user for {{ slave_node }} to MySQL on {{ master_node }} (may take several minutes)
   no_log: "{{ no_log_flag }}" # don't log decrypted passwords in responses
   expect:
-    command: >
-      sshpass -p '{{ hostvars[master_node].ansible_ssh_pass }}' ssh {{ ansible_ssh_extra_args }}
-      {{ hostvars[master_node].ansible_user }}@{{ master_node }} {{ command_add_slave_user }}
+    command: sshpass -p '{{ gateway_root_password }}' ssh {{ ansible_ssh_extra_args }} root@{{ master_node }} /opt/SecureSpan/Appliance/bin/add_slave_user.sh
+    timeout: 600
     responses:
       "Enter hostname or IP for the SLAVE:": "{{ slave_node }}"
-      "Enter replication user:": "{{ hostvars[slave_node].database_repl_user }}"
-      "Enter replication password:": "{{ hostvars[slave_node].database_repl_pass }}"
-      "Enter MySQL root user:": "{{ hostvars[slave_node].database_admin_user }}"
-      "Enter MySQL root password:": "{{ hostvars[slave_node].database_admin_pass }}"
+      "Enter replication user:": "{{ database_repl_user }}"
+      "Enter replication password:": "{{ database_repl_pass }}"
+      "Enter MySQL root user:": "{{ database_admin_user }}"
+      "Enter MySQL root password:": "{{ database_admin_pass }}"
       Is this the Primary \(1\) or Secondary \(2\) database node? : "{{ node_type }}"
       "Do you want to continue?" : "y"
   register: status
