--- a/roles/gateway_replicate_database/tasks/create_slave.yml
+++ b/roles/gateway_replicate_database/tasks/create_slave.yml
@@ -1,15 +1,17 @@
-- name: Run create_slave.sh on {{ master_node }}
+---
+# This task will setup MySQL replication on a Gateway.
+
+- name: Setup MySQL slave on {{ master_node }} (may take several minutes)
   no_log: "{{ no_log_flag }}" # don't log decrypted passwords in responses
   expect:
-    command: >
-      sshpass -p '{{ hostvars[master_node].ansible_ssh_pass }}' ssh {{ ansible_ssh_extra_args }}
-      {{ hostvars[master_node].ansible_user }}@{{ master_node }} {{ command_create_slave }}
+    command: sshpass -p '{{ gateway_root_password }}' ssh {{ ansible_ssh_extra_args }} root@{{ master_node }} /opt/SecureSpan/Appliance/bin/create_slave.sh
+    timeout: 600
     responses:
       "Enter hostname or IP for the MASTER:": "{{ slave_node }}"
-      "Enter replication user:": "{{ hostvars[slave_node].database_repl_user }}"
-      "Enter replication password:": "{{ hostvars[slave_node].database_repl_pass }}"
-      "Enter MySQL root user:": "{{ hostvars[slave_node].database_admin_user }}"
-      "Enter MySQL root password:": "{{ hostvars[slave_node].database_admin_pass }}"
+      "Enter replication user:": "{{ database_repl_user }}"
+      "Enter replication password:": "{{ database_repl_pass }}"
+      "Enter MySQL root user:": "{{ database_admin_user }}"
+      "Enter MySQL root password:": "{{ database_admin_pass }}"
       "Do you want to clone a database" : "no"
   register: status
   changed_when:
