--- a/roles/gateway_configure_db_replication/tasks/verify_replication.yml
+++ b/roles/gateway_configure_db_replication/tasks/verify_replication.yml
@@ -1,4 +1,7 @@
-- name: Verify replication has started
+---
+# This task checks if MySQL replication is setup on a Gateway.
+
+- name: Verify Gateway replication has started on {{ ansible_host }}
   shell:
     cmd: mysql -e "show slave status\G;" | grep Slave
   register: status
