Fix the gateway_controller_cleanup/tasks/main.yml to include the vars… (#27)
* Fix the gateway_controller_cleanup/tasks/main.yml to include the vars from the gateway_papim.yml.

* Remove trailing white space

--- a/roles/gateway_controller_cleanup/tasks/main.yml
+++ b/roles/gateway_controller_cleanup/tasks/main.yml
@@ -1,5 +1,11 @@
 ---
 # tasks file for gateway_controller_cleanup
+ - name: Setting facts
+   set_fact:
+     papim_var_file_path: "{{ ansible_inventory_sources | first }}/group_vars/gateway_papim.yml"
+
+ - name: Include vars
+   include_vars: "{{ papim_var_file_path }}"
 
  - name: Delete backup files on Ansible controller created by gateway_basic_backup role.
    local_action: # noqa 504
