--- a/playbooks/gateway-basic-backup.yml
+++ b/playbooks/gateway-basic-backup.yml
@@ -2,7 +2,7 @@
 # This playbook will backup Gateway configurations and store them on the Ansible controller. 
 # See the readme under roles/gateway_basic_backup for setup instructions.
 - name: Detect source gateway mysql nodes
-  hosts: "gateway_mysql,gateway_processing_node"
+  hosts: gateway
   gather_facts: no
   tasks:
     - name: collect src hosts
