Fix gateway_papim children
It was missing an "d".

--- a/inventories/sample/hosts.yml
+++ b/inventories/sample/hosts.yml
@@ -21,7 +21,7 @@ all:
         gateway_hsm:
           hosts:
         gateway_papim:
-          chilren:
+          children:
             gateway_papim_source:
               hosts:
             gateway_papim_install:
