--- a/roles/gateway_export_database/tasks/main.yml
+++ b/roles/gateway_export_database/tasks/main.yml
@@ -14,7 +14,7 @@
 - name: Dump gateway source database # noqa 305 must use shell
   no_log: "{{ no_log_flag }}" # don't log decrypted passwords in responses
   shell:
-    cmd: mysqldump {{ database_name }} --routines -u{{ database_user }}  -p{{ database_pass }} > {{ remote_db_temp_dir }}/ssg.sql
+    cmd: mysqldump {{ database_name }} --no-tablespaces --routines -u{{ database_user }}  -p{{ database_pass }} > {{ remote_db_temp_dir }}/ssg.sql
   register: status
   changed_when: status.rc == 0
 
