--- a/.github/workflows/ansible-lint.yml
+++ b/.github/workflows/ansible-lint.yml
@@ -13,7 +13,7 @@ jobs:
 
     - name: Lint Ansible Playbook
       # replace "master" with any valid ref
-      uses: ansible/ansible-lint-action@151b9a224f53c80fdc2c7aed08f3671d190e7a9e # https://github.com/ansible/ansible-lint-action/issues/13
+      uses: ansible/ansible-lint-action@master
       with:
         # [required]
         # Paths to ansible files (i.e., playbooks, tasks, handlers etc..)
@@ -21,15 +21,14 @@ jobs:
         # directory structure.
         # If you want to lint multiple ansible files, use the following syntax
         targets: |
-          playbooks/*.yaml
           playbooks/*.yml
           roles/*
         # [optional]
         # Arguments to override a package and its version to be set explicitly.
         # Must follow the example syntax.
-        #override-deps: 
-        #  ansible==2.9
-        #  ansible-lint==4.2.0
+        override-deps: |
+          ansible~=2.10
+          ansible-lint~=5.0
         # [optional]
         # Arguments to be passed to the ansible-lint
 
@@ -52,4 +51,4 @@ jobs:
         #                         path to directories or files to skip. This option is
         #                         repeatable.
         #   -c C                  Specify configuration file to use. Defaults to ".ansible-lint"
-        args: "-x 208"
+        args: "-x unnamed-task,deprecated-local-action,risky-file-permissions"
